--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura de códigos</li>
         <li>Integração Contínua: descrição qualquer</li>
     </ul>
 </body>
